# mcp-commerce

./: .gitignore  CLAUDE.md  README.md  SOLUTION.md  controller_implementation_template.py  debug_tools_count.py  demo_configured_server.py  example_configuration.md  original_cart_controller.py  package.json  pyproject.toml  remove_fallback_urls.ps1  requirements.txt  restore_missing_tools.py  run_server.py  test_configuration.py  test_mcp_server.py  update_all_controllers.ps1
.claude/: settings.local.json
mcp_dynamics365_commerce_server/: __init__.py  __main__.py  config.py  database.py  server.py
mcp_dynamics365_commerce_server/controllers/: address.py  app_info.py  async_service.py  attribute.py  attribute_group.py  audit_event.py  barcode.py  card_type.py  cart.py  cash_declaration.py  catalogs.py  categories.py  cities.py  commission_sales_group.py  counties.py  country_region.py  credit_memo.py  currency.py  customer.py  customer_balance.py  customer_group.py  delivery_options.py  device_configuration.py  district.py  environment_configuration.py  extensible_enumeration.py  extension_package_definition.py  gift_card.py  hardware_profiles.py  image.py  income_expense_accounts.py  kits.py  language.py  localized_string.py  loyalty_card.py  non_sales_transaction_tender_operations.py  notification.py  number_sequence.py  operations.py  org_units.py  (+26 more)
