[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-dynamics365-commerce-server"
version = "1.0.0"
description = "MCP Server for Dynamics 365 Commerce Retail Server Customer Consumer API"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
    "pydantic>=2.5.0"
]
requires-python = ">=3.10"

[project.scripts]
mcp-dynamics365-commerce-server = "mcp_dynamics365_commerce_server.server:main"